deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wordpress
  namespace: prod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress
        name: wordpress
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        volumeMounts:
          - mountPath: /etc/secret
            name: file-secret
      volumes:
      - name: file-secret
        secret:
          secretName: backend-system-prod
          items:
          - key: username
            path: username
            mode: 0600
          - key: password
            path: password
            mode: 0600
